fix: added space on mobile "scroll" text + changed title index.html

--- a/src/styles/modern/ClassicSection.css
+++ b/src/styles/modern/ClassicSection.css
@@ -72,7 +72,7 @@
 
 .scroll-indicator {
   position: absolute;
-  bottom: 1.5rem;
+  bottom: calc(1.5rem + env(safe-area-inset-bottom));
   display: flex;
   flex-direction: column;
   align-items: center;
